[project]
name = "scaict-uwu"
# PEP 440
# @see https://sethmlarson.dev/pep-440
version = "0.1.7.dev0"
description = "A cat living in SCAICT Discord server."
readme.file = "README.md"
readme.content-type = "text/markdown"
requires-python = "== 3.11"
license.file = "LICENSE"
# Use Git committer/author name here
authors = [
	{ name = "ChiuDeYuan" },
	{ name = "Each Chen" },
	{ name = "Elvis Mao" },
	{ name = "os24" },
	{ name = "Winston Sung" },
]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
]
urls.repository = "https://github.com/SCAICT/SCAICT-uwu.git"
urls.issues = "https://github.com/SCAICT/SCAICT-uwu/issues"
dependencies = [
	"aiohttp == 3.9.5",
	"aiosignal == 1.3.1",
	"annotated-types == 0.7.0",
	"attrs == 23.2.0",
	"blinker == 1.8.2",
	"cachetools == 5.3.3",
	"certifi == 2024.6.2",
	"charset-normalizer == 3.3.2",
	"click == 8.1.7",
	"colorama == 0.4.6",
	"distlib == 0.3.8",
	"Flask == 3.0.3",
	"frozenlist == 1.4.1",
	"google-ai-generativelanguage == 0.6.6",
	"google-api-core == 2.19.1",
	"google-api-python-client == 2.135.0",
	"google-auth == 2.30.0",
	"google-auth-httplib2 == 0.2.0",
	"google-generativeai == 0.7.1",
	"googleapis-common-protos == 1.63.2",
	"grpcio == 1.64.1",
	"grpcio-status == 1.62.2",
	"httplib2 == 0.22.0",
	"idna == 3.7",
	"itsdangerous == 2.2.0",
	"Jinja2 == 3.1.4",
	"MarkupSafe == 2.1.5",
	"multidict == 6.0.5",
	"mysql-connector-python == 8.4.0",
	"proto-plus == 1.24.0",
	"protobuf == 4.25.3",
	"py-cord == 2.5.0",
	"pyasn1 == 0.6.0",
	"pyasn1_modules == 0.4.0",
	"pydantic == 2.7.4",
	"pydantic_core == 2.18.4",
	"pyparsing == 3.1.2",
	"python-dotenv == 1.0.1",
	"requests == 2.32.3",
	"rsa == 4.9",
	"tqdm == 4.66.4",
	"typing_extensions == 4.12.2",
	"uritemplate == 4.1.1",
	"urllib3 == 2.2.1",
	"Werkzeug == 3.0.1",
	"yarl == 1.9.4",
]
