[project]
# Only use lowercase letters and hyphens here
# @see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#name
# @see https://packaging.python.org/en/latest/specifications/name-normalization/
name = "scaict-uwu"
# PEP 440
# @see https://sethmlarson.dev/pep-440
version = "0.1.11.dev0"
description = "A cat living in SCAICT Discord server."
readme.file = "README.md"
readme.content-type = "text/markdown"
requires-python = "== 3.11.*"
license = "Apache-2.0"
license-files = [
	"LICENSE",
]
# Use Git committer/author name here
authors = [
	{ name = "ChiuDeYuan" },
	{ name = "Each Chen" },
	{ name = "Elvis Mao" },
	{ name = "os24" },
	{ name = "Winston Sung" },
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Environment :: Web Environment",
	"Framework :: Flask",
	"Framework :: Pytest",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Information Technology",
	"Natural Language :: Chinese (Traditional)",
	"Operating System :: OS Independent",
	"Programming Language :: JavaScript",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: SQL",
]
urls.repository = "https://github.com/SCAICT/SCAICT-uwu.git"
urls.issues = "https://github.com/SCAICT/SCAICT-uwu/issues"
# Lock file: requirements.txt
dependencies = [
	"flask == 3.1.2",
	"mysql-connector-python == 9.5.0",
	"py-cord == 2.6.1",
	"python-dotenv == 1.2.1",
	"requests == 2.32.5",
]
# Lock file: requirements_dev.txt
optional-dependencies.dev = [
	"black == 25.9.0",
	"pylint == 4.0.2",
	"pytest == 8.4.2",
]
